overlapping text fixed

--- a/app-client/css/style.css
+++ b/app-client/css/style.css
@@ -1,3 +1,9 @@
+.wordBreak {
+
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+}
 .loginTemplate {
     padding-top: 30px;
     background-color: #c0dfd9;
